--- a/QantasHotelListing/ClientApp/package.json
+++ b/QantasHotelListing/ClientApp/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "css-star-rating": "^1.2.4",
+    "ng2-toasty": "^4.0.3",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.5",
     "rxjs": "^5.5.6",
